discussion/kv_engine/187490/187490_rev16_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-55672: Convert RangeScan to perform network IO on frontend

Before this commit the "send" of the data read by a RangeScan was
occurring on the IO task. With this commit now all data read by
a RangeScan is "sent" by the frontend executor.

RangeScan's are converted to follow the established notify IO complete
pattern.

Front-end thread receives a client's range-scan-continue request
and execution enters ep-engine continueRangeScan passing "success" as
the currentStatus.

ep-engine now schedules an IO task to move the scan forwards and
returns would_block. Front-end thread is now free to do other work.

IO thread will run the scan until some event triggers the task to
yield. E.g. a limit was reached or the responseBuffer which stores
the scanned data is at or over the configured limit. What ever the
event was, this is returned to the front-end thread via
notifyIOComplete.

Front-end thread re-processes the range-scan-continue and execution
enters ep-engine passing the IO complete status as currentStatus.

ep-engine detects the IO complete phase by reading back an object
which was stashed in the engine-specific then if currentStatus is:

success: A continue is still running but the responseBuffer needs
sending. The responseBuffer is "drained" to the client via
Cookie::sendResponse and an IO task rescheduled - ep-engine
returns would_block. The RangeScan remains in the Continue state.

range_scan_more: A continue reached a requested limit or was throttled.
The responseBuffer is "drained" to the client via
Cookie::sendResponse and the request is complete. The RangeScan is
changed to be Idle.

range_scan_complete: A continue reached the scan end. The
responseBuffer is "drained" to the client via Cookie::sendResponse and
the request is complete. The RangeScan is changed to be Complete and
removed from the map of available RangeScan objects.

other status: A continue encountered an error. The responseBuffer is
cleared (not sent). The RangeScan is changed to be Cancelled and
removed from the map of available RangeScan objects.

With this change some of the RangeScan state management is simplified
in that the RangeScanOwner does all of the state changes in response
to the status of a continue - no longer does the IO task drive the
state to be Cancelled/Complete.

With this change the performance of a RangeScan (as measured by the
kv_engine/rangescan tool) is reduced. Primarily as between each 8K
of keys/values there is a "cycle" of io-complete and task scheduling.
Prior to this change, the IO task would keep on running with no
reschedule required.

Data from the rangescan tool suggest that with this commit there is a
~7% reduction in rangescan throughput.

Test used a single node with 16 vbuckets, 420MB of keys will be
returned by the scan (total of all vbuckets). The scan used no limits,
i.e. a single continue request progresses the scan from start to end.

Time to perform the scan (no limits), average of 5 runs.

pre   | post
------|------
37.8s | 40.6s

This difference can be removed by increasing the RangeScan buffer size
and will be done in a later commit.

Change-Id: I17566daa37700a4caaf1f85152a4185929b29cf0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-03-21 20:46:32.000000000
Message: 
Uploaded patch set 16.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-21 21:45:13.000000000
Message: 
Patch Set 16: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52477/ : FAILURE

Failure of GoogleTest "TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl":

<pre>
[ RUN      ] TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl
C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_stats.cc(302): error: Value of: stats.empty()
  Actual: true
Expected: false
[  FAILED  ] TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl, where GetParam() = McbpSsl (5 ms)
TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52477/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23012/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:111:28: error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
                       cb::engine_errc currentStatus)
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:140:9: error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
    cb::engine_errc currentStatus{cb::engine_errc::success};
        ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23012/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:111:28:
error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23012/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23293/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/44023/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12744/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1819/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25080/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26393/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25541/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24665/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33495/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12826/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
